welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:7: error: identifier expected but 'true' found.
if (estSurBiscuit():true){
                    ^RunHalf:19: error: ')' expected but '}' found.
}
^